[tool.poetry]
name = "knowhax"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC0 1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taipy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
