[tool.poetry]
name = "knowhax"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC0 1.0 Universal"
readme = "README.md"
packages = [
    { include = "knowhax", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
invoke = "^2.2.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
